pkg/ibmvpc/examples/out/explain_out/TCPRespondPortsQuery_all_vpcs_explain_detail.txt
Explaining connectivity from vsi3a-ky to vsi1-ky within test-vpc1-ky using "protocol: TCP src-ports: 90-180 dst-ports: 20-60"
Interpreted source: vsi3a-ky[10.240.30.5]
Interpreted destination: vsi1-ky[10.240.10.4]
=============================================================================================================================

Connections are allowed from vsi3a-ky[10.240.30.5] to vsi1-ky[10.240.10.4] using "protocol: TCP src-ports: 90-180 dst-ports: 20-60"
	However, TCP response is blocked for: src-ports: 100-180 dst-ports: 51-60; src-ports: 90-99 dst-ports: 20-60

Path:
	vsi3a-ky[10.240.30.5] -> security group sg3-ky -> network ACL acl3-ky -> subnet3-ky -> 
	subnet1-ky -> network ACL acl1-ky -> security group sg1-ky -> vsi1-ky[10.240.10.4]


Details:
~~~~~~~~
Path is enabled; The relevant rules are:
	Egress:
		security group sg3-ky allows connection with the following allow rules
			index: 0, direction: outbound,  conns: protocol: all, remote: 0.0.0.0/0, local: 0.0.0.0/0
			index: 2, direction: outbound,  conns: protocol: tcp,  dstPorts: 1-65535, remote: 0.0.0.0/0, local: 0.0.0.0/0
		network ACL acl3-ky allows connection with the following allow rules
			index: 0, direction: outbound , src: 0.0.0.0/0 , dst: 0.0.0.0/0, conn: all, action: allow

	Ingress:
		network ACL acl1-ky allows connection with the following allow rules
			index: 1, direction: inbound , src: 0.0.0.0/0 , dst: 0.0.0.0/0, conn: all, action: allow
		security group sg1-ky allows connection with the following allow rules
			index: 4, direction: inbound,  conns: protocol: all, remote: sg3-ky (10.240.30.5/32,10.240.30.6/32), local: 0.0.0.0/0

TCP response is partly enabled; The relevant rules are:
	Egress:
		network ACL acl1-ky allows connection with the following allow rules
			index: 0, direction: outbound , src: 0.0.0.0/0 , dst: 0.0.0.0/0, conn: protocol: tcp, srcPorts: 1-50, dstPorts: 100-200, action: allow

	Ingress:
		network ACL acl3-ky allows connection with the following allow rules
			index: 1, direction: inbound , src: 0.0.0.0/0 , dst: 0.0.0.0/0, conn: protocol: tcp, srcPorts: 10-60, dstPorts: 100-220, action: allow

------------------------------------------------------------------------------------------------------------------------
